--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0609.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0609.html
@@ -232,7 +232,7 @@
         </span>
         <span id="w_40" class="ocr_word" title="bbox 583 424 644 477" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐ</ins>
+            <ins title="nlp 2.00">(οὐ</ins>
           </span>
         </span>
         <span id="w_41" class="ocr_word" title="bbox 682 439 754 477" lang="grc">
@@ -297,9 +297,14 @@
             <ins class="alt" title="nlp 1.00">ἡ</ins>
           </span>
         </span>
-        <span id="w_54" class="ocr_word" title="bbox 660 507 717 533" lang="grc">
+        <span id="w_54_0" class="ocr_word" title="bbox 660 507 717 533">
           <span class="alternatives">
-            <ins title="nlp 2.00">σ&amp;#x772;ω&amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">σω&amp;#x772;</ins>
+          </span>
+        </span>
+        <span id="w_54_1" class="ocr_word" title="bbox 660 507 717 533">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_55" class="ocr_word" title="bbox 755 492 925 546" lang="grc">
@@ -317,24 +322,19 @@
             <ins class="alt" title="nlp 1.00">ἡ</ins>
           </span>
         </span>
-        <span id="w_58" class="ocr_word" title="bbox 1073 507 1144 545">
+        <span id="w_58_0" class="ocr_word" title="bbox 1073 507 1144 545">
           <span class="alternatives">
-            <ins title="nlp 2.00">χ&amp;#x772;ρ&amp;#x772;α&amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">κρα&amp;#x772;</ins>
+          </span>
+        </span>
+        <span id="w_58_1" class="ocr_word" title="bbox 1073 507 1144 545">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_59" class="ocr_word" title="bbox 1175 509 1283 534" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὐδὲν</ins>
-          </span>
-        </span>
-        <span id="w_60" class="ocr_word" title="bbox 1315 508 1502 549" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σημαίνει.</ins>
-          </span>
-        </span>
-        <span id="w_61" class="ocr_word" title="bbox 1572 496 1853 548" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐξηγησώμεθα</ins>
           </span>
         </span>
       </span>
@@ -428,7 +428,7 @@
         </span>
         <span id="w_79" class="ocr_word" title="bbox 961 627 1020 681" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἡ]</ins>
+            <ins title="nlp 2.00">[ἡ]</ins>
           </span>
         </span>
         <span id="w_80" class="ocr_word" title="bbox 1060 644 1125 668" lang="grc">
@@ -783,16 +783,11 @@
         </span>
         <span id="w_150" class="ocr_word" title="bbox 1628 983 1853 1010" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατεσκευα-</ins>
+            <ins title="nlp 2.00">κατεσκευασμένον,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 192 1036 1851 1092">
-        <span id="w_151" class="ocr_word" title="bbox 192 1052 346 1092" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σμένον,</ins>
-          </span>
-        </span>
         <span id="w_152" class="ocr_word" title="bbox 386 1053 429 1077" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐκ</ins>
@@ -1222,9 +1217,14 @@
             <ins class="alt" title="nlp 1.00">πράγματα.</ins>
           </span>
         </span>
-        <span id="w_235" class="ocr_word" title="bbox 747 1512 926 1567" lang="grc">
+        <span id="w_235_0" class="ocr_word" title="bbox 747 1512 926 1567">
           <span class="alternatives">
-            <ins title="nlp 2.00">“Ελληνες</ins>
+            <ins class="alt" title="nlp 2.00">Ἕλληνες</ins>
+          </span>
+        </span>
+        <span id="w_235_1" class="ocr_word" title="bbox 747 1512 926 1567">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_236" class="ocr_word" title="bbox 957 1530 998 1554" lang="grc">
@@ -1250,11 +1250,6 @@
         <span id="w_240" class="ocr_word" title="bbox 1552 1515 1691 1554" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἄλλως.</ins>
-          </span>
-        </span>
-        <span id="w_241" class="ocr_word" title="bbox 1752 1529 1851 1567" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">εἴρηται</ins>
           </span>
         </span>
       </span>
@@ -1289,9 +1284,14 @@
             <ins class="alt" title="nlp 1.00">ζῴων</ins>
           </span>
         </span>
-        <span id="w_249" class="ocr_word" title="bbox 1222 1580 1309 1635" lang="grc">
+        <span id="w_249_0" class="ocr_word" title="bbox 1222 1580 1309 1635">
           <span class="alternatives">
-            <ins title="nlp 2.00">&lt;ὡς&gt;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ὡς&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_249_1" class="ocr_word" title="bbox 1222 1580 1309 1635">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_250" class="ocr_word" title="bbox 1340 1598 1408 1636" lang="grc">
@@ -1307,11 +1307,6 @@
         <span id="w_252" class="ocr_word" title="bbox 1540 1598 1650 1622" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">κυνὸς</ins>
-          </span>
-        </span>
-        <span id="w_253" class="ocr_word" title="bbox 1687 1583 1850 1635" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὑλακῆς·</ins>
           </span>
         </span>
       </span>
@@ -1366,9 +1361,14 @@
             <ins class="alt" title="nlp 1.00">σημαντική</ins>
           </span>
         </span>
-        <span id="w_264" class="ocr_word" title="bbox 1421 1650 1551 1703" lang="grc">
+        <span id="w_264_0" class="ocr_word" title="bbox 1421 1650 1551 1703">
           <span class="alternatives">
-            <ins title="nlp 2.00">(δηλοῖ</ins>
+            <ins class="alt" title="nlp 2.00">(δηλοῖ</ins>
+          </span>
+        </span>
+        <span id="w_264_1" class="ocr_word" title="bbox 1421 1650 1551 1703">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_265" class="ocr_word" title="bbox 1582 1665 1650 1703" lang="grc">
@@ -1379,11 +1379,6 @@
         <span id="w_266" class="ocr_word" title="bbox 1680 1665 1703 1703" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἢ</ins>
-          </span>
-        </span>
-        <span id="w_267" class="ocr_word" title="bbox 1728 1651 1848 1703" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φίλων</ins>
           </span>
         </span>
       </span>
@@ -1450,9 +1445,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 190 1786 1848 1843">
-        <span id="w_280" class="ocr_word" title="bbox 190 1790 340 1843" lang="grc">
+        <span id="w_280_0" class="ocr_word" title="bbox 190 1790 340 1843">
           <span class="alternatives">
-            <ins title="nlp 2.00">παρουσίᾳ</ins>
+            <ins class="alt" title="nlp 2.00">ὅτι</ins>
+          </span>
+        </span>
+        <span id="w_280_1" class="ocr_word" title="bbox 190 1790 340 1843">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">῾τῇ</ins>
           </span>
         </span>
         <span id="w_281" class="ocr_word" title="bbox 379 1804 565 1829" lang="grc">
@@ -2157,9 +2157,14 @@
             <ins class="alt" title="nlp 1.00">τοῦτο</ins>
           </span>
         </span>
-        <span id="w_415" class="ocr_word" title="bbox 516 2691 619 2716" lang="grc">
+        <span id="w_415_0" class="ocr_word" title="bbox 516 2691 619 2716">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">εἶπεν"</ins>
+            <ins class="alt" title="nlp 2.00">εἶπεν·</ins>
+          </span>
+        </span>
+        <span id="w_415_1" class="ocr_word" title="bbox 516 2691 619 2716">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_417" class="ocr_word" title="bbox 683 2673 687 2730" lang="grc">
@@ -2207,20 +2212,14 @@
             <ins class="alt" title="nlp 1.00">ἡ</ins>
           </span>
         </span>
-        <span id="w_426" class="ocr_word" title="bbox 1770 2685 1814 2712" lang="grc">
+        <span id="w_426_0" class="ocr_word" title="bbox 1770 2685 1814 2712">
           <span class="alternatives">
-            <ins title="nlp 2.00">α&amp;#x772;ν&amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">αν&amp;#x772;</ins>
           </span>
         </span>
-        <span id="w_427" class="ocr_word" title="bbox 1835 2684 1853 2707">
+        <span id="w_426_1" class="ocr_word" title="bbox 1770 2685 1814 2712">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">f.</ins>
-            <del title="nlp 0.90">f.</del>
-          </span>
-        </span>
-        <span id="w_428" class="ocr_word" title="bbox 1866 2680 1917 2708">
-          <span class="alternatives">
-            <ins title="nlp 2.00">40v</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -2568,18 +2567,17 @@
         </span>
         <span id="w_492" class="ocr_word" title="bbox 924 3052 966 3084">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">27</ins>
+            <ins class="alt" title="nlp 2.00">27r</ins>
           </span>
         </span>
-        <span id="w_493" class="ocr_word" title="bbox 976 3061 989 3078">
+        <span id="w_494_0" class="ocr_word" title="bbox 1022 3051 1142 3085">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">r</ins>
-            <del title="nlp 0.90">r</del>
+            <ins class="alt" title="nlp 2.00">Boëth.</ins>
           </span>
         </span>
-        <span id="w_494" class="ocr_word" title="bbox 1022 3051 1142 3085">
+        <span id="w_494_1" class="ocr_word" title="bbox 1022 3051 1142 3085">
           <span class="alternatives">
-            <ins title="nlp 2.00">Boëth.</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_495" class="ocr_word" title="bbox 1160 3052 1188 3084">
@@ -2606,12 +2604,6 @@
         <span id="w_499" class="ocr_word" title="bbox 1532 3049 1702 3095" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">περισυνός</ins>
-          </span>
-        </span>
-        <span id="w_500" class="ocr_word" title="bbox 1726 3049 1753 3083">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">P</ins>
-            <del title="nlp 0.90">P</del>
           </span>
         </span>
       </span>
