--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0518.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0518.html
@@ -705,16 +705,11 @@
         </span>
         <span id="w_133" class="ocr_word" title="bbox 2024 910 2102 934" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ποι-</ins>
+            <ins title="nlp 2.00">ποιεῖται</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 416 963 2104 1020">
-        <span id="w_134" class="ocr_word" title="bbox 416 982 513 1008" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εῖται</ins>
-          </span>
-        </span>
         <span id="w_135" class="ocr_word" title="bbox 542 982 612 1020" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὴν</ins>
