--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0570.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0570.html
@@ -648,9 +648,14 @@
             <ins class="alt" title="nlp 1.00">10</ins>
           </span>
         </span>
-        <span id="w_124" class="ocr_word" title="bbox 424 830 710 882" lang="grc">
+        <span id="w_124_0" class="ocr_word" title="bbox 424 830 710 882">
           <span class="alternatives">
-            <ins title="nlp 2.00">μορφωθείσης.</ins>
+            <ins class="alt" title="nlp 2.00">μορφωθείσης.</ins>
+          </span>
+        </span>
+        <span id="w_124_1" class="ocr_word" title="bbox 424 830 710 882">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">|</ins>
           </span>
         </span>
         <span id="w_125" class="ocr_word" title="bbox 774 829 986 869" lang="grc">
@@ -1722,12 +1727,7 @@
         </span>
         <span id="w_332" class="ocr_word" title="bbox 474 2171 572 2213">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">15,11</ins>
-          </span>
-        </span>
-        <span id="w_333" class="ocr_word" title="bbox 639 2159 866 2215" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">εἴλήδθω δὲ τὸ εἶδος ὡς εἶδος ἀλλ’ οὐχ ὡς γένος.</ins>
+            <ins title="nlp 2.00">15,11 Εἰλήφθω δὲ τὸ εἶδος ὡς εἶδος ἀλλ᾿ οὐχ ὡς γένος.</ins>
           </span>
         </span>
       </span>
@@ -2288,8 +2288,7 @@
         </span>
         <span id="w_440" class="ocr_word" title="bbox 2131 3023 2166 3044">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">to</ins>
-            <del title="nlp 0.90">to</del>
+            <ins title="nlp 2.00">τὸ</ins>
           </span>
         </span>
       </span>
