--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0519.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0519.html
@@ -1423,9 +1423,9 @@
             <ins title="nlp 1.00" class="alt">ὅτι</ins>
           </span>
         </span>
-        <span lang="grc" title="bbox 1692 1659 1870 1698" class="ocr_word" id="w_275">
+        <span id="w_275_0" class="ocr_word" title="bbox 1692 1659 1870 1698">
           <span class="alternatives">
-            <ins title="nlp 2.00">δελατρὀα</ins>
+            <ins class="alt" title="nlp 2.00">δεκατρία</ins>
           </span>
         </span>
       </span>
@@ -1817,16 +1817,11 @@
         </span>
         <span lang="grc" title="bbox 1740 2058 1872 2095" class="ocr_word" id="w_351">
           <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">ἐπελύ-</ins>
+            <ins title="nlp 2.00">ἐπελύσαντο·</ins>
           </span>
         </span>
       </span>
       <span title="bbox 195 2127 1869 2185" class="ocr_line">
-        <span lang="grc" title="bbox 195 2147 325 2174" class="ocr_word" id="w_352">
-          <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">σαντο·</ins>
-          </span>
-        </span>
         <span lang="grc" title="bbox 361 2133 561 2185" class="ocr_word" id="w_353">
           <span class="alternatives">
             <ins title="nlp 1.00" class="alt">συνάγεται</ins>
@@ -1957,7 +1952,7 @@
         </span>
         <span lang="grc" title="bbox 1513 2286 1534 2320" class="ocr_word" id="w_377">
           <span class="alternatives">
-            <ins title="nlp 2.00">3 λέγει] an λέγειν ?</ins>
+            <ins title="nlp 2.00">λέγει] an λέγειν ?</ins>
           </span>
         </span>
       </span>
@@ -2144,12 +2139,7 @@
         </span>
         <span id="w_412_0" class="ocr_word" title="bbox 1162 2466 1301 2509">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">scripsi</ins>
-          </span>
-        </span>
-        <span id="w_412_1" class="ocr_word" title="bbox 1162 2466 1301 2509">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">scripsi:</ins>
           </span>
         </span>
         <span lang="grc" title="bbox 1330 2464 1465 2497" class="ocr_word" id="w_413">
