--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0571.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0571.html
@@ -349,9 +349,14 @@
             <ins title="nlp 2.00">ἀντιδιαιρουμέναις</ins>
           </span>
         </span>
-        <span id="w_63" class="ocr_word" title="bbox 1193 845 1424 899" lang="grc">
+        <span id="w_63_0" class="ocr_word" title="bbox 1193 845 1424 899">
           <span class="alternatives">
-            <ins title="nlp 2.00">διαφοραις)</ins>
+            <ins class="alt" title="nlp 2.00">διαφοραῖς),</ins>
+          </span>
+        </span>
+        <span id="w_63_1" class="ocr_word" title="bbox 1193 845 1424 899">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_64" class="ocr_word" title="bbox 1462 862 1514 886" lang="grc">
@@ -367,11 +372,6 @@
         <span id="w_66" class="ocr_word" title="bbox 1631 846 1731 899" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἴδη</ins>
-          </span>
-        </span>
-        <span id="w_67" class="ocr_word" title="bbox 1772 861 1858 885" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῶν</ins>
           </span>
         </span>
       </span>
@@ -552,14 +552,24 @@
             <ins class="alt" title="nlp 1.00">ὑφ’</ins>
           </span>
         </span>
-        <span id="w_102_0" class="ocr_word" title="bbox 490 1172 542 1196">
+        <span id="w_102_0_0" class="ocr_word" title="bbox 490 1172 542 1196">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ᾧν</ins>
+            <ins class="alt" title="nlp 2.00">ὧν</ins>
           </span>
         </span>
-        <span id="w_102_1" class="ocr_word" title="bbox 490 1172 542 1196">
+        <span id="w_102_0_1" class="ocr_word" title="bbox 490 1172 542 1196">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">κατηγοποῦνται·</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_102_1_0" class="ocr_word" title="bbox 490 1172 542 1196">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">κατηγοροῦνται·</ins>
+          </span>
+        </span>
+        <span id="w_102_1_1" class="ocr_word" title="bbox 490 1172 542 1196">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_103" class="ocr_word" title="bbox 950 1155 969 1195" lang="grc">
@@ -585,16 +595,6 @@
         <span id="w_107" class="ocr_word" title="bbox 1561 1156 1623 1196" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_108" class="ocr_word" title="bbox 1659 1157 1701 1196" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
-          </span>
-        </span>
-        <span id="w_109" class="ocr_word" title="bbox 1744 1159 1858 1206" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ζῷον,</ins>
           </span>
         </span>
       </span>
@@ -946,9 +946,14 @@
             <ins class="alt" title="nlp 1.00">οὕτω</ins>
           </span>
         </span>
-        <span id="w_176" class="ocr_word" title="bbox 317 1659 379 1684" lang="grc">
+        <span id="w_176_0" class="ocr_word" title="bbox 317 1659 379 1684">
           <span class="alternatives">
-            <ins title="nlp 2.00">καὶ-</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
+          </span>
+        </span>
+        <span id="w_176_1" class="ocr_word" title="bbox 317 1659 379 1684">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_177" class="ocr_word" title="bbox 411 1659 453 1682" lang="grc">
@@ -979,11 +984,6 @@
         <span id="w_181" class="ocr_word" title="bbox 1569 1652 1756 1681" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὀνόματος</ins>
-          </span>
-        </span>
-        <span id="w_182" class="ocr_word" title="bbox 1786 1636 1856 1690" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γὰρ</ins>
           </span>
         </span>
       </span>
@@ -1957,8 +1957,7 @@
         </span>
         <span id="w_365" class="ocr_word" title="bbox 957 2999 1036 3032">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">adJ.</ins>
-            <del title="nlp 0.90">adJ.</del>
+            <ins title="nlp 2.00">add.</ins>
           </span>
         </span>
         <span id="w_366" class="ocr_word" title="bbox 1063 2999 1116 3031">
@@ -2044,8 +2043,7 @@
         </span>
         <span id="w_381" class="ocr_word" title="bbox 791 3071 856 3092">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">oin.</ins>
-            <del title="nlp 0.90">oin.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_382" class="ocr_word" title="bbox 884 3059 910 3092">
@@ -2112,8 +2110,7 @@
         </span>
         <span id="w_393" class="ocr_word" title="bbox 482 3124 540 3155">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’j</ins>
-            <del title="nlp 0.90">’j</del>
+            <ins title="nlp 2.00">τοῦ</ins>
           </span>
         </span>
         <span id="w_394" class="ocr_word" title="bbox 567 3120 663 3165">
