--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0658.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0658.html
@@ -17,7 +17,7 @@
         </span>
         <span id="w_1" class="ocr_word" title="bbox 590 94 812 129">
           <span class="alternatives">
-            <ins title="nlp 2.00">,STi:iMlAM</ins>
+            <ins title="nlp 2.00">STEPHANI</ins>
           </span>
         </span>
         <span id="w_2" class="ocr_word" title="bbox 843 90 886 124">
@@ -40,8 +40,7 @@
         </span>
         <span id="w_5" class="ocr_word" title="bbox 1062 83 1492 121">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">INTEUPKKTATIONE</ins>
-            <del title="nlp 0.90">INTEUPKKTATIONE</del>
+            <ins title="nlp 2.00">INTERPRETATIONE</ins>
           </span>
         </span>
         <span id="w_6" class="ocr_word" title="bbox 1521 82 1642 127">
@@ -776,16 +775,11 @@
         </span>
         <span id="w_147" class="ocr_word" title="bbox 1921 949 2072 1001" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐνδεχο-</ins>
+            <ins title="nlp 2.00">ἐνδεχομένως</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 403 1017 2073 1088">
-        <span id="w_148" class="ocr_word" title="bbox 403 1049 528 1088" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μένως</ins>
-          </span>
-        </span>
         <span id="w_149" class="ocr_word" title="bbox 559 1033 720 1088" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">βαδίζει·</ins>
@@ -1044,14 +1038,9 @@
             <ins class="alt" title="nlp 1.00">εἴπω</ins>
           </span>
         </span>
-        <span id="w_200" class="ocr_word" title="bbox 1361 1294 1369 1309" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">῾ </ins>
-          </span>
-        </span>
         <span id="w_201" class="ocr_word" title="bbox 1384 1309 1540 1335" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δυνατὸν</ins>
+            <ins class="alt" title="nlp 2.00">῾ δυνατὸν</ins>
           </span>
         </span>
         <span id="w_202" class="ocr_word" title="bbox 1571 1293 1778 1333" lang="grc">
@@ -1240,19 +1229,19 @@
             <ins class="alt" title="nlp 2.00">δυνατοῦ,</ins>
           </span>
         </span>
-        <span id="w_232_0" class="ocr_word" title="bbox 1147 1519 1201 1548">
+        <span id="w_232_0_0" class="ocr_word" title="bbox 1147 1519 1201 1548">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">δῆηον</ins>
+            <ins class="alt" title="nlp 2.00">δῆ|λον</ins>
+          </span>
+        </span>
+        <span id="w_232_0_1" class="ocr_word" title="bbox 1147 1519 1201 1548">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_232_1" class="ocr_word" title="bbox 1147 1519 1201 1548">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">ὅτι</ins>
-          </span>
-        </span>
-        <span id="w_233" class="ocr_word" title="bbox 1231 1518 1296 1543" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">f. 74r</ins>
           </span>
         </span>
       </span>
@@ -1374,14 +1363,14 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_263" class="ocr_word" title="bbox 1931 1651 1955 1675">
+        <span id="w_263_0" class="ocr_word" title="bbox 1931 1651 1955 1675">
           <span class="alternatives">
-            <ins title="nlp 2.00">α &amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">ᾱ</ins>
           </span>
         </span>
-        <span id="w_264" class="ocr_word" title="bbox 1992 1651 2083 1689" lang="grc">
+        <span id="w_263_1" class="ocr_word" title="bbox 1931 1651 1955 1675">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἡμῖν</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1438,16 +1427,11 @@
         </span>
         <span id="w_275" class="ocr_word" title="bbox 1993 1719 2085 1744" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀπο-</ins>
+            <ins title="nlp 2.00">ἀποφάσεις</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 415 1775 2084 1837">
-        <span id="w_276" class="ocr_word" title="bbox 415 1789 549 1832" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φάσεις</ins>
-          </span>
-        </span>
         <span id="w_277" class="ocr_word" title="bbox 588 1788 649 1828" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐπὶ</ins>
@@ -1604,19 +1588,19 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_307" class="ocr_word" title="bbox 1597 1998 1622 2022">
+        <span id="w_307_0" class="ocr_word" title="bbox 1597 1998 1622 2022">
           <span class="alternatives">
-            <ins title="nlp 2.00">α &amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">ᾱ</ins>
+          </span>
+        </span>
+        <span id="w_307_1" class="ocr_word" title="bbox 1597 1998 1622 2022">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_308" class="ocr_word" title="bbox 1653 1982 1874 2035" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">διάγραμμα</ins>
-          </span>
-        </span>
-        <span id="w_309" class="ocr_word" title="bbox 1903 1994 2086 2019" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοιοῦτον··</ins>
           </span>
         </span>
       </span>
@@ -1683,14 +1667,9 @@
             <ins title="nlp 2.00">εἶναι ’ ,</ins>
           </span>
         </span>
-        <span id="w_322" class="ocr_word" title="bbox 784 2128 792 2142">
-          <span class="alternatives">
-            <ins title="nlp 2.00">῾ </ins>
-          </span>
-        </span>
         <span id="w_323" class="ocr_word" title="bbox 805 2128 1058 2181" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐνδεχόμενον</ins>
+            <ins class="alt" title="nlp 2.00">῾ ἐνδεχόμενον</ins>
           </span>
         </span>
         <span id="w_324" class="ocr_word" title="bbox 1090 2123 1225 2164" lang="grc">
@@ -1745,9 +1724,14 @@
             <ins class="alt" title="nlp 1.00">τίθησιν</ins>
           </span>
         </span>
-        <span id="w_334" class="ocr_word" title="bbox 759 2194 999 2250" lang="grc">
+        <span id="w_334_0" class="ocr_word" title="bbox 759 2194 999 2250">
           <span class="alternatives">
-            <ins title="nlp 2.00">λέγων  ῾ οὐ</ins>
+            <ins class="alt" title="nlp 2.00">λέγων</ins>
+          </span>
+        </span>
+        <span id="w_334_1" class="ocr_word" title="bbox 759 2194 999 2250">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">᾿οὐκ</ins>
           </span>
         </span>
         <span id="w_335" class="ocr_word" title="bbox 1029 2193 1213 2233" lang="grc">
@@ -1797,9 +1781,14 @@
             <ins class="alt" title="nlp 1.00">ἀναγκαίου,</ins>
           </span>
         </span>
-        <span id="w_345" class="ocr_word" title="bbox 882 2261 1107 2317" lang="grc">
+        <span id="w_345_0" class="ocr_word" title="bbox 882 2261 1107 2317">
           <span class="alternatives">
-            <ins title="nlp 2.00">λέγων ῾ οὐκ</ins>
+            <ins class="alt" title="nlp 2.00">λέγων</ins>
+          </span>
+        </span>
+        <span id="w_345_1" class="ocr_word" title="bbox 882 2261 1107 2317">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">᾿οὐκ</ins>
           </span>
         </span>
         <span id="w_346" class="ocr_word" title="bbox 1123 2261 1328 2314" lang="grc">
@@ -1822,19 +1811,19 @@
             <ins class="alt" title="nlp 1.00">ἐφεξῆς</ins>
           </span>
         </span>
-        <span id="w_350" class="ocr_word" title="bbox 1775 2254 1848 2310">
+        <span id="w_350_0" class="ocr_word" title="bbox 1775 2254 1848 2310">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C; ἐν &amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ἐν&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_350_1" class="ocr_word" title="bbox 1775 2254 1848 2310">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_351" class="ocr_word" title="bbox 1866 2259 1912 2308" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῇ</ins>
-          </span>
-        </span>
-        <span id="w_352" class="ocr_word" title="bbox 1935 2269 2093 2308" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">δευτέρᾳ</ins>
           </span>
         </span>
       </span>
@@ -2102,14 +2091,9 @@
             <ins class="alt" title="nlp 1.00">ἀποφάσεις</ins>
           </span>
         </span>
-        <span id="w_405" class="ocr_word" title="bbox 1564 2601 1572 2615">
-          <span class="alternatives">
-            <ins title="nlp 2.00">῾</ins>
-          </span>
-        </span>
         <span id="w_406" class="ocr_word" title="bbox 1585 2616 1629 2640" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐ</ins>
+            <ins class="alt" title="nlp 2.00">῾οὐ</ins>
           </span>
         </span>
         <span id="w_407" class="ocr_word" title="bbox 1663 2614 1822 2640" lang="grc">
@@ -2122,14 +2106,9 @@
             <ins title="nlp 2.00">εἶναι ’ ,</ins>
           </span>
         </span>
-        <span id="w_409" class="ocr_word" title="bbox 2007 2596 2016 2610">
-          <span class="alternatives">
-            <ins title="nlp 2.00">῾</ins>
-          </span>
-        </span>
         <span id="w_410" class="ocr_word" title="bbox 2029 2611 2099 2636">
           <span class="alternatives">
-            <ins title="nlp 2.00">οὐκ</ins>
+            <ins title="nlp 2.00">῾οὐκ</ins>
           </span>
         </span>
       </span>
@@ -2388,8 +2367,7 @@
         </span>
         <span id="w_459" class="ocr_word" title="bbox 1978 2961 2036 3005">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">fjiv</ins>
-            <del title="nlp 0.90">fjiv</del>
+            <ins title="nlp 2.00">μὲν</ins>
           </span>
         </span>
         <span id="w_460" class="ocr_word" title="bbox 2063 2959 2173 2993">
@@ -2486,8 +2464,7 @@
         </span>
         <span id="w_476" class="ocr_word" title="bbox 474 3092 534 3125">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">P-:</ins>
-            <del title="nlp 0.90">P-:</del>
+            <ins title="nlp 2.00">P2:</ins>
           </span>
         </span>
         <span id="w_477" class="ocr_word" title="bbox 560 3102 696 3124" lang="grc">
@@ -2503,8 +2480,7 @@
         </span>
         <span id="w_479" class="ocr_word" title="bbox 828 3091 868 3124">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">P1</ins>
           </span>
         </span>
         <span id="w_480" class="ocr_word" title="bbox 1025 3088 1069 3122">
