--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0610.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0610.html
@@ -203,9 +203,9 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 410 417 473 457">
-        <span id="w_36" class="ocr_word" title="bbox 410 417 473 457" lang="grc">
+        <span id="w_36_0" class="ocr_word" title="bbox 410 417 473 457">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
       </span>
@@ -262,9 +262,9 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 411 551 509 608">
-        <span id="w_47" class="ocr_word" title="bbox 411 551 509 608">
+        <span id="w_47_0" class="ocr_word" title="bbox 411 551 509 608">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;καὶ&amp;#x003E;</ins>
           </span>
         </span>
       </span>
@@ -1112,14 +1112,14 @@
             <ins class="alt" title="nlp 1.00">ἵππον</ins>
           </span>
         </span>
-        <span id="w_215" class="ocr_word" title="bbox 1707 1577 2012 1633" lang="grc">
+        <span id="w_215_0" class="ocr_word" title="bbox 1707 1577 2012 1633">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἐπαχτροχέλης</ins>
+            <ins class="alt" title="nlp 2.00">(επακτροκέλης</ins>
           </span>
         </span>
-        <span id="w_216" class="ocr_word" title="bbox 2045 1594 2086 1619" lang="grc">
+        <span id="w_215_1" class="ocr_word" title="bbox 1707 1577 2012 1633">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δέ</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -2131,7 +2131,7 @@
         </span>
         <span id="w_413" class="ocr_word" title="bbox 891 2869 930 2889" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αὖ</ins>
+            <ins title="nlp 2.00">αυ</ins>
           </span>
         </span>
         <span id="w_414" class="ocr_word" title="bbox 956 2856 982 2889">
@@ -2147,17 +2147,7 @@
         </span>
         <span id="w_416" class="ocr_word" title="bbox 1190 2856 1372 2902" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὡρισμένηω</ins>
-          </span>
-        </span>
-        <span id="w_417" class="ocr_word" title="bbox 1383 2875 1424 2878">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
-        <span id="w_418" class="ocr_word" title="bbox 1436 2865 1608 2900" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἰσάγουσα</ins>
+            <ins title="nlp 2.00">ὡρισμένηω—εἰσάγουσα</ins>
           </span>
         </span>
         <span id="w_419" class="ocr_word" title="bbox 1632 2856 1670 2888">
@@ -2379,13 +2369,8 @@
         </span>
         <span id="w_460" class="ocr_word" title="bbox 1394 3064 1585 3098">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Aeschines</ins>
+            <ins class="alt" title="nlp 2.00">Aeschines:</ins>
             <del title="nlp 0.90">Aeschines</del>
-          </span>
-        </span>
-        <span id="w_461" class="ocr_word" title="bbox 1596 3077 1603 3096">
-          <span class="alternatives">
-            <ins title="nlp 2.00">:</ins>
           </span>
         </span>
         <span id="w_462" class="ocr_word" title="bbox 1623 3062 1811 3107" lang="grc">
@@ -2421,12 +2406,7 @@
       <span class="ocr_line" title="bbox 356 3153 2158 3202">
         <span id="w_467" class="ocr_word" title="bbox 356 3157 479 3200">
           <span class="alternatives">
-            <ins title="nlp 2.00">scripsi</ins>
-          </span>
-        </span>
-        <span id="w_468" class="ocr_word" title="bbox 489 3171 495 3189">
-          <span class="alternatives">
-            <ins title="nlp 2.00">:</ins>
+            <ins title="nlp 2.00">scripsi:</ins>
           </span>
         </span>
         <span id="w_469" class="ocr_word" title="bbox 509 3168 650 3201" lang="grc">
