--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0520.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0520.html
@@ -417,7 +417,7 @@
         </span>
         <span id="w_78" class="ocr_word" title="bbox 1947 478 2102 518" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἔναλλα·</ins>
+            <ins title="nlp 2.00">ἐναλλαγήν·</ins>
           </span>
         </span>
       </span>
@@ -618,12 +618,7 @@
         </span>
         <span id="w_117_0" class="ocr_word" title="bbox 1802 687 2100 740">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ἀπολογεῖσθαι</ins>
-          </span>
-        </span>
-        <span id="w_117_1" class="ocr_word" title="bbox 1802 687 2100 740">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">;</ins>
+            <ins class="alt" title="nlp 2.00">ἀπολογεῖσθαι;</ins>
           </span>
         </span>
       </span>
@@ -750,14 +745,14 @@
             <ins class="alt" title="nlp 1.00">οὖν</ins>
           </span>
         </span>
-        <span id="w_142" class="ocr_word" title="bbox 1779 824 2046 880" lang="grc">
+        <span id="w_142_0" class="ocr_word" title="bbox 1779 824 2046 880">
           <span class="alternatives">
-            <ins title="nlp 2.00">πεπέρασται·</ins>
+            <ins class="alt" title="nlp 2.00">πε|πέρασται·</ins>
           </span>
         </span>
-        <span id="w_143" class="ocr_word" title="bbox 2080 829 2158 865">
+        <span id="w_142_1" class="ocr_word" title="bbox 1779 824 2046 880">
           <span class="alternatives">
-            <ins title="nlp 2.00">195ν</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1148,9 +1143,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 531 1778 2099 1834">
-        <span id="w_219" class="ocr_word" title="bbox 531 1780 652 1822" lang="grc">
+        <span id="w_219_0" class="ocr_word" title="bbox 531 1780 652 1822">
           <span class="alternatives">
-            <ins title="nlp 2.00">πάλιν</ins>
+            <ins class="alt" title="nlp 2.00">Πάλιν</ins>
+          </span>
+        </span>
+        <span id="w_219_1" class="ocr_word" title="bbox 531 1780 652 1822">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_220" class="ocr_word" title="bbox 689 1796 753 1820" lang="grc">
@@ -1196,11 +1196,6 @@
         <span id="w_228" class="ocr_word" title="bbox 1871 1794 1998 1819" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μέσων</ins>
-          </span>
-        </span>
-        <span id="w_229" class="ocr_word" title="bbox 2037 1795 2099 1820" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
       </span>
@@ -1731,7 +1726,7 @@
         </span>
         <span id="w_331" class="ocr_word" title="bbox 866 2949 895 2981" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γ’</ins>
+            <ins title="nlp 2.00">V</ins>
           </span>
         </span>
         <span id="w_332" class="ocr_word" title="bbox 1018 2949 1039 2982">
@@ -1809,13 +1804,7 @@
         </span>
         <span id="w_345" class="ocr_word" title="bbox 549 3009 579 3041">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V</ins>
-            <del title="nlp 0.90">V</del>
-          </span>
-        </span>
-        <span id="w_346" class="ocr_word" title="bbox 774 3010 814 3042" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">10 pr. γὰρ]δὲ Κ</ins>
+            <ins title="nlp 2.00">V 10 pr. γὰρ] δὲ Κ</ins>
           </span>
         </span>
         <span id="w_347" class="ocr_word" title="bbox 1303 3009 1404 3053" lang="grc">
