--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0573.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0573.html
@@ -505,8 +505,7 @@
       <span class="ocr_line" title="bbox 280 881 1843 937">
         <span id="w_95" class="ocr_word" title="bbox 280 881 333 922">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">To</ins>
-            <del title="nlp 0.90">To</del>
+            <ins title="nlp 2.00">Τὸ</ins>
           </span>
         </span>
         <span id="w_96" class="ocr_word" title="bbox 370 882 441 936" lang="grc">
@@ -740,7 +739,7 @@
       <span class="ocr_line" title="bbox 103 1493 1850 1551">
         <span id="w_139" class="ocr_word" title="bbox 103 1513 141 1544" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">15 καὶ μόνῳ καὶ ἀεί,</ins>
+            <ins title="nlp 2.00">καὶ μόνῳ καὶ ἀεί,</ins>
           </span>
         </span>
         <span id="w_140" class="ocr_word" title="bbox 424 1512 495 1536" lang="grc">
@@ -1413,9 +1412,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 283 2469 1860 2529">
-        <span id="w_262" class="ocr_word" title="bbox 283 2477 368 2520" lang="grc">
+        <span id="w_262_0" class="ocr_word" title="bbox 283 2477 368 2520">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ἵ</ins>
+            <ins class="alt" title="nlp 2.00">Ἵνα</ins>
+          </span>
+        </span>
+        <span id="w_262_1" class="ocr_word" title="bbox 283 2477 368 2520">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_263" class="ocr_word" title="bbox 399 2493 441 2518" lang="grc">
@@ -1456,11 +1460,6 @@
         <span id="w_270" class="ocr_word" title="bbox 1536 2469 1733 2523" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">διαφοράς,</ins>
-          </span>
-        </span>
-        <span id="w_271" class="ocr_word" title="bbox 1765 2482 1860 2521" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φέρε</ins>
           </span>
         </span>
       </span>
@@ -1788,8 +1787,7 @@
         </span>
         <span id="w_335" class="ocr_word" title="bbox 745 2958 789 2980">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">au</ins>
-            <del title="nlp 0.90">au</del>
+            <ins title="nlp 2.00">an</ins>
           </span>
         </span>
         <span id="w_336" class="ocr_word" title="bbox 815 2945 914 2979" lang="grc">
@@ -1797,9 +1795,14 @@
             <ins title="nlp 2.00">ὑποκ.</ins>
           </span>
         </span>
-        <span id="w_337" class="ocr_word" title="bbox 939 2947 991 2986" lang="grc">
+        <span id="w_337_0" class="ocr_word" title="bbox 939 2947 991 2986">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ὃν</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ἂν</ins>
+          </span>
+        </span>
+        <span id="w_337_1" class="ocr_word" title="bbox 939 2947 991 2986">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_338" class="ocr_word" title="bbox 1016 2945 1063 2989" lang="grc">
@@ -1825,11 +1828,6 @@
         <span id="w_342" class="ocr_word" title="bbox 1615 2937 1774 2971" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐπέλυσαν</ins>
-          </span>
-        </span>
-        <span id="w_343" class="ocr_word" title="bbox 1807 2936 1838 2969" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Κ</ins>
           </span>
         </span>
       </span>
@@ -1997,8 +1995,7 @@
         </span>
         <span id="w_374" class="ocr_word" title="bbox 1394 3071 1421 3091">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">o)</ins>
-            <del title="nlp 0.90">o</del>
+            <ins title="nlp 2.00">ὦ</ins>
           </span>
         </span>
         <span id="w_375" class="ocr_word" title="bbox 1441 3057 1467 3090">
