--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0611.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0611.html
@@ -330,14 +330,9 @@
             <ins title="nlp 2.00">16a27</ins>
           </span>
         </span>
-        <span id="w_62" class="ocr_word" title="bbox 444 631 503 673" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Tὸ δὲ χατὰ συνθήχην</ins>
-          </span>
-        </span>
         <span id="w_63" class="ocr_word" title="bbox 1062 645 1130 668" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὅτι</ins>
+            <ins title="nlp 2.00">Τὸ δὲ κατὰ συνθήκην, ὅτι</ins>
           </span>
         </span>
         <span id="w_64" class="ocr_word" title="bbox 1162 643 1300 683" lang="grc">
@@ -997,34 +992,34 @@
             <ins title="nlp 2.00">παραδειλμάτων</ins>
           </span>
         </span>
-        <span id="w_193" class="ocr_word" title="bbox 1214 1400 1239 1416">
+        <span id="w_193_0" class="ocr_word" title="bbox 1214 1400 1239 1416">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x203B;</ins>
+            <ins class="alt" title="nlp 2.00">*</ins>
           </span>
         </span>
-        <span id="w_194" class="ocr_word" title="bbox 1270 1392 1296 1416">
+        <span id="w_193_1" class="ocr_word" title="bbox 1214 1400 1239 1416">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x203B;</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_195" class="ocr_word" title="bbox 1326 1401 1352 1417" lang="grc">
+        <span id="w_194_0" class="ocr_word" title="bbox 1270 1392 1296 1416">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x203B;</ins>
+            <ins class="alt" title="nlp 2.00">*</ins>
           </span>
         </span>
-        <span id="w_196" class="ocr_word" title="bbox 1403 1392 1495 1432" lang="grc">
+        <span id="w_194_1" class="ocr_word" title="bbox 1270 1392 1296 1416">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὅπερ</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_197" class="ocr_word" title="bbox 1539 1391 1647 1416" lang="grc">
+        <span id="w_195_0" class="ocr_word" title="bbox 1326 1401 1352 1417">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐδὲν</ins>
+            <ins class="alt" title="nlp 2.00">*</ins>
           </span>
         </span>
-        <span id="w_198" class="ocr_word" title="bbox 1693 1389 1862 1428" lang="grc">
+        <span id="w_195_1" class="ocr_word" title="bbox 1326 1401 1352 1417">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">διαφέρει</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1089,14 +1084,14 @@
             <ins class="alt" title="nlp 1.00">ἔτυχεν</ins>
           </span>
         </span>
-        <span id="w_211" class="ocr_word" title="bbox 1762 1441 1832 1482" lang="grc">
+        <span id="w_211_0" class="ocr_word" title="bbox 1762 1441 1832 1482">
           <span class="alternatives">
-            <ins title="nlp 2.00">χείμενον.</ins>
+            <ins class="alt" title="nlp 2.00">κείμενον.</ins>
           </span>
         </span>
-        <span id="w_212" class="ocr_word" title="bbox 1852 1451 1932 1480">
+        <span id="w_211_1" class="ocr_word" title="bbox 1762 1441 1832 1482">
           <span class="alternatives">
-            <ins title="nlp 2.00">f. 41v</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1327,19 +1322,19 @@
             <ins class="alt" title="nlp 1.00">Μὲν</ins>
           </span>
         </span>
-        <span id="w_259" class="ocr_word" title="bbox 1499 1733 1561 1757" lang="grc">
+        <span id="w_259_0" class="ocr_word" title="bbox 1499 1733 1561 1757">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
+          </span>
+        </span>
+        <span id="w_259_1" class="ocr_word" title="bbox 1499 1733 1561 1757">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_260" class="ocr_word" title="bbox 1594 1716 1651 1756" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">Δὲ</ins>
-          </span>
-        </span>
-        <span id="w_261" class="ocr_word" title="bbox 1683 1728 1864 1768" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">προσαγορεύων</ins>
           </span>
         </span>
       </span>
@@ -1466,21 +1461,21 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_287" class="ocr_word" title="bbox 1546 1870 1569 1894">
+        <span id="w_287_0" class="ocr_word" title="bbox 1546 1870 1569 1894">
           <span class="alternatives">
-            <ins title="nlp 2.00">α&amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">ᾱ</ins>
           </span>
         </span>
-        <span id="w_288" class="ocr_word" title="bbox 1586 1866 1864 1907" lang="grc">
+        <span id="w_287_1" class="ocr_word" title="bbox 1546 1870 1569 1894">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σημαινόμενον</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 206 1925 1863 1986">
         <span id="w_289" class="ocr_word" title="bbox 206 1948 272 1972" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοὐ</ins>
+            <ins title="nlp 2.00">τοῦ</ins>
           </span>
         </span>
         <span id="w_290" class="ocr_word" title="bbox 290 1931 401 1986" lang="grc">
@@ -1503,9 +1498,14 @@
             <ins class="alt" title="nlp 2.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_293" class="ocr_word" title="bbox 689 1925 709 1982">
+        <span id="w_293_0" class="ocr_word" title="bbox 689 1925 709 1982">
           <span class="alternatives">
-            <ins title="nlp 2.00">β&amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">β&amp;#x772;</ins>
+          </span>
+        </span>
+        <span id="w_293_1" class="ocr_word" title="bbox 689 1925 709 1982">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_294" class="ocr_word" title="bbox 722 1930 789 1967" lang="grc">
@@ -1518,49 +1518,39 @@
             <ins class="alt" title="nlp 1.00">θέσει</ins>
           </span>
         </span>
-        <span id="w_296" class="ocr_word" title="bbox 930 1949 955 1965">
+        <span id="w_296_0" class="ocr_word" title="bbox 930 1949 955 1965">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x203B;</ins>
+            <ins class="alt" title="nlp 2.00">*</ins>
           </span>
         </span>
-        <span id="w_297" class="ocr_word" title="bbox 987 1940 1012 1965" lang="grc">
+        <span id="w_296_1" class="ocr_word" title="bbox 930 1949 955 1965">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x203B;</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_298" class="ocr_word" title="bbox 1044 1940 1068 1964">
+        <span id="w_297_0" class="ocr_word" title="bbox 987 1940 1012 1965">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x203B;</ins>
+            <ins class="alt" title="nlp 2.00">*</ins>
+          </span>
+        </span>
+        <span id="w_297_1" class="ocr_word" title="bbox 987 1940 1012 1965">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_298_0" class="ocr_word" title="bbox 1044 1940 1068 1964">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">*</ins>
+          </span>
+        </span>
+        <span id="w_298_1" class="ocr_word" title="bbox 1044 1940 1068 1964">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_299" class="ocr_word" title="bbox 1107 1940 1198 1978" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὅπερ</ins>
-          </span>
-        </span>
-        <span id="w_300" class="ocr_word" title="bbox 1217 1940 1350 1964" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ταὐτόν</ins>
-          </span>
-        </span>
-        <span id="w_301" class="ocr_word" title="bbox 1369 1938 1467 1963" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐστιν</ins>
-          </span>
-        </span>
-        <span id="w_302" class="ocr_word" title="bbox 1485 1938 1538 1962" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῷ</ins>
-          </span>
-        </span>
-        <span id="w_303" class="ocr_word" title="bbox 1554 1938 1577 1962">
-          <span class="alternatives">
-            <ins title="nlp 2.00">α&amp;#x772;</ins>
-          </span>
-        </span>
-        <span id="w_304" class="ocr_word" title="bbox 1595 1936 1863 1974" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σημαινομένῳ</ins>
           </span>
         </span>
       </span>
@@ -1845,7 +1835,7 @@
         </span>
         <span id="w_359" class="ocr_word" title="bbox 637 2270 784 2324" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Πυρρὸν</ins>
+            <ins title="nlp 2.00">Πύρρον</ins>
           </span>
         </span>
         <span id="w_360" class="ocr_word" title="bbox 812 2269 1079 2310" lang="grc">
@@ -1890,9 +1880,14 @@
             <ins class="alt" title="nlp 1.00">ὁ</ins>
           </span>
         </span>
-        <span id="w_368" class="ocr_word" title="bbox 349 2341 507 2382" lang="grc">
+        <span id="w_368_0" class="ocr_word" title="bbox 349 2341 507 2382">
           <span class="alternatives">
-            <ins title="nlp 2.00">Πλάτων</ins>
+            <ins class="alt" title="nlp 2.00">Πλάτων</ins>
+          </span>
+        </span>
+        <span id="w_368_1" class="ocr_word" title="bbox 349 2341 507 2382">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_369" class="ocr_word" title="bbox 525 2338 777 2393" lang="grc">
@@ -1928,11 +1923,6 @@
         <span id="w_375" class="ocr_word" title="bbox 1703 2346 1744 2369" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
-          </span>
-        </span>
-        <span id="w_376" class="ocr_word" title="bbox 1773 2345 1864 2368" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αὐτὸ</ins>
           </span>
         </span>
       </span>
@@ -2054,14 +2044,14 @@
             <ins class="alt" title="nlp 1.00">κειμένων;</ins>
           </span>
         </span>
-        <span id="w_400" class="ocr_word" title="bbox 1710 2465 1806 2520">
+        <span id="w_400_0" class="ocr_word" title="bbox 1710 2465 1806 2520">
           <span class="alternatives">
-            <ins title="nlp 2.00">&lt;χαὶ&gt;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;καὶ&amp;#x003E;</ins>
           </span>
         </span>
-        <span id="w_401" class="ocr_word" title="bbox 1827 2481 1865 2505" lang="grc">
+        <span id="w_400_1" class="ocr_word" title="bbox 1710 2465 1806 2520">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αἱ</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -2185,7 +2175,7 @@
         </span>
         <span id="w_425" class="ocr_word" title="bbox 1768 2604 1865 2656" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἄλλη</ins>
+            <ins title="nlp 2.00">῾ἄλλη</ins>
           </span>
         </span>
       </span>
@@ -2248,9 +2238,14 @@
             <del title="nlp 0.90">fortasse</del>
           </span>
         </span>
-        <span id="w_438" class="ocr_word" title="bbox 1478 2707 1527 2753">
+        <span id="w_438_0" class="ocr_word" title="bbox 1478 2707 1527 2753">
           <span class="alternatives">
-            <ins title="nlp 2.00">&lt;ῇ&gt;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ᾖ&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_438_1" class="ocr_word" title="bbox 1478 2707 1527 2753">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_439" class="ocr_word" title="bbox 1554 2719 1740 2750" lang="grc">
@@ -2258,14 +2253,9 @@
             <ins class="alt" title="nlp 1.00">σημαντικὴ</ins>
           </span>
         </span>
-        <span id="w_440" class="ocr_word" title="bbox 1766 2705 1816 2749">
+        <span id="w_440_0" class="ocr_word" title="bbox 1766 2705 1816 2749">
           <span class="alternatives">
-            <ins title="nlp 2.00">&lt;ἡ&gt;</ins>
-          </span>
-        </span>
-        <span id="w_441" class="ocr_word" title="bbox 1841 2705 1936 2749" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φωνή</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ἡ&amp;#x003E;</ins>
           </span>
         </span>
       </span>
@@ -2492,7 +2482,7 @@
         </span>
         <span id="w_483" class="ocr_word" title="bbox 1366 2890 1386 2928" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἡ</ins>
+            <ins title="nlp 2.00">ἢ</ins>
           </span>
         </span>
         <span id="w_484" class="ocr_word" title="bbox 1413 2894 1471 2915" lang="grc">
@@ -2560,13 +2550,7 @@
         </span>
         <span id="w_495" class="ocr_word" title="bbox 809 2946 839 2978">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
-          </span>
-        </span>
-        <span id="w_496" class="ocr_word" title="bbox 859 2945 892 2977">
-          <span class="alternatives">
-            <ins title="nlp 2.00">13</ins>
+            <ins title="nlp 2.00">II 1 3</ins>
           </span>
         </span>
         <span id="w_497" class="ocr_word" title="bbox 910 2944 976 2978">
@@ -2625,9 +2609,14 @@
             <ins class="alt" title="nlp 1.00">κατὰ</ins>
           </span>
         </span>
-        <span id="w_507" class="ocr_word" title="bbox 362 3019 398 3039" lang="grc">
+        <span id="w_507_0" class="ocr_word" title="bbox 362 3019 398 3039">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
+            <ins class="alt" title="nlp 2.00">τὸ</ins>
+          </span>
+        </span>
+        <span id="w_507_1" class="ocr_word" title="bbox 362 3019 398 3039">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">β&amp;#x772;</ins>
           </span>
         </span>
         <span id="w_508" class="ocr_word" title="bbox 469 3008 527 3038" lang="grc">
@@ -2660,13 +2649,7 @@
         </span>
         <span id="w_513" class="ocr_word" title="bbox 1019 3002 1060 3035">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">31</ins>
-          </span>
-        </span>
-        <span id="w_514" class="ocr_word" title="bbox 1072 3012 1085 3028">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">r</ins>
-            <del title="nlp 0.90">r</del>
+            <ins class="alt" title="nlp 2.00">31r</ins>
           </span>
         </span>
         <span id="w_515" class="ocr_word" title="bbox 1210 2999 1251 3032">
@@ -2717,18 +2700,17 @@
         </span>
         <span id="w_523" class="ocr_word" title="bbox 338 3065 378 3097">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">17</ins>
+            <ins class="alt" title="nlp 2.00">17v</ins>
           </span>
         </span>
-        <span id="w_524" class="ocr_word" title="bbox 387 3074 403 3090">
+        <span id="w_525_0" class="ocr_word" title="bbox 427 3064 593 3097">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V</ins>
-            <del title="nlp 0.90">V</del>
+            <ins class="alt" title="nlp 2.00">Boëthius</ins>
           </span>
         </span>
-        <span id="w_525" class="ocr_word" title="bbox 427 3064 593 3097">
+        <span id="w_525_1" class="ocr_word" title="bbox 427 3064 593 3097">
           <span class="alternatives">
-            <ins title="nlp 2.00">Boëthius</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_526" class="ocr_word" title="bbox 613 3063 643 3095" lang="grc">
@@ -2771,11 +2753,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">scripsi:</ins>
             <del title="nlp 0.90">scripsi:</del>
-          </span>
-        </span>
-        <span id="w_534" class="ocr_word" title="bbox 1810 3049 1938 3086" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κεῖσθαι</ins>
           </span>
         </span>
       </span>
