--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0574.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0574.html
@@ -1196,9 +1196,14 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_233" class="ocr_word" title="bbox 948 1581 1206 1635" lang="grc">
+        <span id="w_233_0" class="ocr_word" title="bbox 948 1581 1206 1635">
           <span class="alternatives">
-            <ins title="nlp 2.00">ουμβεβηκός,</ins>
+            <ins class="alt" title="nlp 2.00">συμβεβηκός,</ins>
+          </span>
+        </span>
+        <span id="w_233_1" class="ocr_word" title="bbox 948 1581 1206 1635">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_234" class="ocr_word" title="bbox 1248 1580 1347 1620" lang="grc">
@@ -1224,11 +1229,6 @@
         <span id="w_238" class="ocr_word" title="bbox 1872 1581 1986 1619" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἰδῶν</ins>
-          </span>
-        </span>
-        <span id="w_239" class="ocr_word" title="bbox 2024 1595 2087 1618" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
       </span>
@@ -2247,24 +2247,34 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 394 2828 2075 2887">
-        <span id="w_438" class="ocr_word" title="bbox 534 2846 610 2869" lang="grc">
+        <span id="w_438_0" class="ocr_word" title="bbox 534 2846 610 2869">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῶν</ins>
+            <ins class="alt" title="nlp 2.00">φέρει</ins>
           </span>
         </span>
-        <span id="w_439" class="ocr_word" title="bbox 643 2837 769 2885" lang="grc">
+        <span id="w_438_1" class="ocr_word" title="bbox 534 2846 610 2869">
           <span class="alternatives">
-            <ins title="nlp 2.00">τοιῶν,</ins>
+            <ins class="alt" title="nlp 2.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_440" class="ocr_word" title="bbox 809 2832 937 2875" lang="grc">
+        <span id="w_440_0" class="ocr_word" title="bbox 809 2832 937 2875">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἴδους</ins>
+            <ins class="alt" title="nlp 2.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_441" class="ocr_word" title="bbox 971 2846 1068 2872" lang="grc">
+        <span id="w_440_1" class="ocr_word" title="bbox 809 2832 937 2875">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἰδίου</ins>
+            <ins class="alt" title="nlp 2.00">τριῶν,</ins>
+          </span>
+        </span>
+        <span id="w_441_0" class="ocr_word" title="bbox 971 2846 1068 2872">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">εἴδους</ins>
+          </span>
+        </span>
+        <span id="w_441_1" class="ocr_word" title="bbox 971 2846 1068 2872">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἰδίου</ins>
           </span>
         </span>
         <span id="w_442" class="ocr_word" title="bbox 1104 2832 1411 2887" lang="grc">
@@ -2285,16 +2295,6 @@
         <span id="w_445" class="ocr_word" title="bbox 1715 2830 1801 2879" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">λέγε</ins>
-          </span>
-        </span>
-        <span id="w_446" class="ocr_word" title="bbox 1833 2843 1896 2867" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_447" class="ocr_word" title="bbox 1927 2840 2075 2878" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γένους·</ins>
           </span>
         </span>
       </span>
