--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0521.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0521.html
@@ -216,7 +216,7 @@
       <span class="ocr_line" title="bbox 738 630 1326 683">
         <span id="w_38" class="ocr_word" title="bbox 738 644 816 673" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">διὰ πλήθους ἐέναι.</ins>
+            <ins title="nlp 2.00">τας διὰ πλήθους ἰέναι.</ins>
           </span>
         </span>
       </span>
@@ -617,9 +617,14 @@
             <ins class="alt" title="nlp 2.00">6,20</ins>
           </span>
         </span>
-        <span id="w_114" class="ocr_word" title="bbox 364 1635 429 1677">
+        <span id="w_114_0" class="ocr_word" title="bbox 364 1635 429 1677">
           <span class="alternatives">
-            <ins title="nlp 2.00">Tὰ</ins>
+            <ins class="alt" title="nlp 2.00">Τὰ</ins>
+          </span>
+        </span>
+        <span id="w_114_1" class="ocr_word" title="bbox 364 1635 429 1677">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_115" class="ocr_word" title="bbox 461 1652 507 1677" lang="grc">
@@ -650,11 +655,6 @@
         <span id="w_118_1" class="ocr_word" title="bbox 1682 1638 1863 1690">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">εἰς</ins>
-          </span>
-        </span>
-        <span id="w_119" class="ocr_word" title="bbox 1892 1657 1898 1668">
-          <span class="alternatives">
-            <ins title="nlp 2.00">πλῆθος</ins>
           </span>
         </span>
       </span>
@@ -1372,9 +1372,14 @@
             <ins class="alt" title="nlp 1.00">συνάγεται</ins>
           </span>
         </span>
-        <span id="w_256" class="ocr_word" title="bbox 993 2843 1069 2882">
+        <span id="w_256_0" class="ocr_word" title="bbox 993 2843 1069 2882">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ὡς&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ὡς&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_256_1" class="ocr_word" title="bbox 993 2843 1069 2882">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_257" class="ocr_word" title="bbox 1088 2844 1101 2873">
@@ -1412,12 +1417,6 @@
         <span id="w_263" class="ocr_word" title="bbox 1754 2853 1791 2873" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
-          </span>
-        </span>
-        <span id="w_264" class="ocr_word" title="bbox 1819 2841 1878 2874">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">TV</ins>
-            <del title="nlp 0.90">TV</del>
           </span>
         </span>
       </span>
@@ -1508,9 +1507,14 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_281" class="ocr_word" title="bbox 488 2959 684 3004" lang="grc">
+        <span id="w_281_0" class="ocr_word" title="bbox 488 2959 684 3004">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀλχιβιάδης</ins>
+            <ins class="alt" title="nlp 2.00">ἀλκιβιάδης</ins>
+          </span>
+        </span>
+        <span id="w_281_1" class="ocr_word" title="bbox 488 2959 684 3004">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_282" class="ocr_word" title="bbox 713 2959 740 2992">
@@ -1568,12 +1572,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">colloc.</ins>
             <del title="nlp 0.90">colloc.</del>
-          </span>
-        </span>
-        <span id="w_293" class="ocr_word" title="bbox 1848 2957 1878 2991">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V</ins>
-            <del title="nlp 0.90">V</del>
           </span>
         </span>
       </span>
@@ -1699,8 +1697,7 @@
         </span>
         <span id="w_316" class="ocr_word" title="bbox 1692 3073 1734 3105">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V</ins>
-            <del title="nlp 0.90">V</del>
+            <ins title="nlp 2.00">V1</ins>
           </span>
         </span>
       </span>
