--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0575.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0575.html
@@ -148,11 +148,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 185 273 1855 329">
-        <span id="w_26" class="ocr_word" title="bbox 185 276 359 329" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βηκότος.</ins>
-          </span>
-        </span>
         <span id="w_27" class="ocr_word" title="bbox 422 275 483 315" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -323,16 +318,11 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_60" class="ocr_word" title="bbox 1696 573 1859 625" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">συμβεβηχότος.</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 922 643 1132 697">
         <span id="w_61" class="ocr_word" title="bbox 922 643 1132 697" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βηκότος.</ins>
+            <ins title="nlp 2.00">συμβεβηκότος.</ins>
           </span>
         </span>
       </span>
